opam-version: "2.0"
synopsis: "Basic utilities for interacting with terminals"
description: "Basic utilities for interacting with terminals"
maintainer: ["Craig Ferguson <me@craigfe.io>"]
authors: ["Craig Ferguson <me@craigfe.io>"]
license: "MIT"
homepage: "https://github.com/CraigFe/progress"
doc: "https://CraigFe.github.io/progress/"
bug-reports: "https://github.com/CraigFe/progress/issues"
depends: [
  "dune" {>= "3.20.0"}
  "ocaml" {>= "4.03.0"}
  "uucp" {>= "2.0.0"}
  "uutf" {>= "1.0.0"}
  "stdlib-shims"
  "alcotest" {with-test & >= "1.4.0"}
  "fmt" {with-test}
  "astring" {with-test}
  "mtime" {with-test & >= "2.0.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/CraigFe/progress.git"
