(library
 (name examples)
 (modules
  (:standard \ main ocaml5))
 (libraries
  progress
  unix
  logs
  logs.fmt
  logs.threaded
  fmt
  fmt.tty
  mtime
  mtime.clock.os
  vector
  threads.posix))

(executable
 (name main)
 (modules main)
 (libraries examples fmt))

(executable
 (name ocaml5)
 (modules ocaml5)
 (libraries progress domainslib))
