(rule
 (target pvector.ml)
 (enabled_if
  (>= %{ocaml_version} "5.2"))
 (action
  (copy# pvector.dynarray.ml %{target})))

(rule
 (enabled_if
  (< %{ocaml_version} "5.2"))
 (action
  (copy# pvector.vector.ml %{target})))

(library
 (name progress_engine)
 (public_name progress.engine)
 (libraries
  (re_export mtime)
  (re_export optint)
  fmt
  logs
  logs.fmt
  terminal_ansi))
